# games-games-games

./: .dev.vars.tpl  .gitignore  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  README.md  SECURITY.md  biome.json  env.d.ts  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json  wrangler.jsonc
.github/ISSUE_TEMPLATE/: bug_report.md  game-request.md
.github/workflows/: ci.yml
apps/worker/: .dev.vars.example  index.html  package.json  provision.sh  tsconfig.json  vite.config.ts  vitest.config.ts
apps/worker/migrations/: 0005_tts_daily_usage.sql  0006_chunks_heading_path.sql  0007_chunks_fts_contextual.sql
apps/worker/public/: _headers
docs/adr/: 0001-single-worker-architecture.md  0002-embeddings-bge-m3-vectorize.md  0003-terraform-wrangler-provisioning-split.md  0004-per-game-retrieval-scoping.md  0005-operator-script-ingestion.md  0006-elevenlabs-tts.md  0007-retrieval-eval-harness.md  0008-pdf-to-markdown-conversion.md
docs/research/: 2026-06-14-rag-architecture-review.md  2026-06-27-rerank-abstention-calibration.md
docs/research/validation/: hero-realms-base.json  hero-realms-lost-village.json  hero-realms-ruin-of-thandar.json  kill-the-unicorns-base.json  scrabble-base.json  (+1 more)
eval/attacks/: goblin-attacks.json
eval/gold/: catalogue.json
migrations/: 0001_init.sql  0002_documents_identity.sql  0003_daily_usage.sql  0004_chunks_fts.sql
public/: .gitkeep  _headers
scripts/: convert-pdfs.py  eval.ts  gen-gold.ts  heal.ts  ingest.ts  injection-eval.ts  provision.sh  validate-md.ts
scripts/lib/: align.test.ts  align.ts  clean.py  http.test.ts  markdown.ts  preserve.test.ts  preserve.ts  wrangler.ts
src/client/: About.tsx  App.tsx  Catalogue.tsx  Chat.tsx  CitationModal.tsx  Goblin.tsx  GoblinMark.tsx  Parlour.tsx  styles.css  theme.test.ts  theme.ts  useGoblinVoice.ts
src/server/: agent-core.test.ts  agent-core.ts  agent.ts  index.ts  tts.test.ts  tts.ts
src/shared/: types.ts
terraform/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tools/operator-scripts/: answerability-eval.test.ts  answerability-eval.ts  eval.ts  gen-gold.ts  heal.ts  ingest.ts  injection-eval.ts  package.json  rerank-calibrate.test.ts  rerank-calibrate.ts  tsconfig.json  validate-md.ts  vitest.config.ts
tools/rulebook-prep/: convert-pdfs.py  pyproject.toml
tools/rulebook-prep/lib/: clean.py  test_clean.py
(+49 files in other folders)
