[project]
name = "ggg-rulebook-tools"
version = "0.0.0"
description = "Offline operator tooling: PDF -> healed markdown (not shipped to the Worker)"
requires-python = ">=3.11"
dependencies = [
  "docling>=2.102.1",
  "unstructured>=0.23.1",
]

[project.optional-dependencies]
# Marker is the escalation converter (vision-LLM via --use_llm); heavy + GPL, install on demand:
#   uv pip install -e ".[escalation]"
escalation = ["marker-pdf>=1.10.2"]

[tool.setuptools]
# This project ships NO Python package — it only pins the operator-side conversion deps; the
# scripts/*.py helpers are imported by path, not installed. Declaring an empty module list disables
# setuptools auto-discovery so `uv pip install -e .` does not scan the TypeScript `src/` dir (which
# otherwise drops a stray src/*.egg-info build artifact).
py-modules = []
