[project]
name = "ggg-rulebook-tools"
version = "0.0.0"
description = "Offline operator tooling: PDF -> healed markdown (not shipped to the Worker)"
requires-python = ">=3.11"
dependencies = [
  "docling>=2.102.1",
  "unstructured>=0.23.1",
]

[project.optional-dependencies]
# Marker is the escalation converter (vision-LLM via --use_llm); heavy + GPL, install on demand:
#   uv pip install -e ".[escalation]"
escalation = ["marker-pdf>=1.10.2"]
# Test deps for the deterministic clean.py logic (no docling needed): uv pip install -e ".[test]"
test = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["lib"]

[tool.setuptools]
# This project ships NO Python package — it only pins the operator-side conversion deps; the
# .py helpers (convert-pdfs.py, lib/*.py) are imported by path, not installed. Declaring an empty
# module list disables setuptools auto-discovery so `uv pip install -e .` does not scan and drop a
# stray *.egg-info build artifact.
py-modules = []
